# weather_cli

./: .gitignore  README.md  pyproject.toml  test_weather.py  weather.py
tests/: test_data.py
