[tool.poetry]
name = "weather_cli"
version = "0.1.0"
description = "Weather CLI"
authors = ["brad90four <42116429+brad90four@users.noreply.github.com>"]
license = "GNU GPL3"

[tool.poetry.dependencies]
python = "^3.10"
iso3166 = "^2.0.2"
python-dotenv = "^0.20.0"
loguru = "^0.6.0"
rapidfuzz = "^2.0.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
